test/tests/operators/to_google_secops/invalid_labels.txt
error: `labels.tenant` must be a string or a record with `value: string` and optional `rbac_enabled: bool`
  --> tests/operators/to_google_secops/invalid_labels.tql:10:10
   |
10 |   labels={tenant: {rbac_enabled: true}}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
